24-03 modo dark feito

--- a/css/dark.css
+++ b/css/dark.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
-    color: #023047
+    color: white;
 }
 
 .acessibilidade{
@@ -21,48 +21,38 @@ body {
     right: 0;
     margin: 5px 10px;
     border-radius: 20px;
-    background-color: #fff;
+    background-color: black;
 }
-#idark{
+.fa-solid {
     display: flex;
     flex-direction: row;
     position: relative;
     font-family: 'Font Awesome 5 Free'; 
-    font-weight: 700;
+    font-weight: 800;
     font-size: x-large;
     margin: 10px 2px;
-}
-#itt{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    font-family: 'Font Awesome 5 Free'; 
-    font-weight: 700;
-    font-size: x-large;
-    margin: 10px 10px;
-    border: 1px solid red;
 }
 
 #login{
     text-align: center;
 }
-.page{
+.page {
     display: flex;
     align-items: center;
     align-content: center;
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to right, rgb(119, 4, 181), rgb(208, 48, 187));
+    background-image: linear-gradient(to right, #7704b5, #d030bb);
 }
 
 .formLogin {
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-color: black;
     border-radius: 7px;
     padding: 40px;
-    box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.4);
+    box-shadow: 10px 10px 40px white;
     gap: 5px
 }
 
@@ -80,14 +70,14 @@ body {
 .formLogin p {
     display: inline-block;
     font-size: 14px;
-    color: #666;
+    color: whi;
     margin-bottom: 25px;
 }
 
 .formLogin input {
     padding: 15px;
     font-size: 14px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     margin-bottom: 20px;
     margin-top: 5px;
     border-radius: 4px;
